Fix align-items of flex layout

--- a/source/css/_common/components/post/post-reward.styl
+++ b/source/css/_common/components/post/post-reward.styl
@@ -2,7 +2,6 @@
   margin: $post-card-margin;
   padding: 1em 0;
   text-align: center;
-  width: 90%;
 
   button {
     background: transparent;
@@ -25,8 +24,8 @@
 }
 
 .post-reward {
-  padding-top: 20px;
   display: none;
+  padding-top: 20px;
 
   &.active {
     display: block;
